syntax = "proto3";
package sf.gear.extrinsic.type.v1;

option go_package = "github.com/streamingfast/firehose-gear/pb/sf/gear/extrinsic/type/v1;pbgearextrinsic";
import "sf/gear/metadata/type/v1/output.proto";

message RuntimeCall {
  oneof call {
    sf.gear.metadata.type.v1.Babe_PlanConfigChangeCall babe_plan_config_change_call = 1;
    sf.gear.metadata.type.v1.Babe_ReportEquivocationCall babe_report_equivocation_call = 2;
    sf.gear.metadata.type.v1.Babe_ReportEquivocationUnsignedCall babe_report_equivocation_unsigned_call = 3;
    sf.gear.metadata.type.v1.BagsList_PutInFrontOfCall bagslist_put_in_front_of_call = 4;
    sf.gear.metadata.type.v1.BagsList_PutInFrontOfOtherCall bagslist_put_in_front_of_other_call = 5;
    sf.gear.metadata.type.v1.BagsList_RebagCall bagslist_rebag_call = 6;
    sf.gear.metadata.type.v1.Balances_ForceSetBalanceCall balances_force_set_balance_call = 7;
    sf.gear.metadata.type.v1.Balances_ForceTransferCall balances_force_transfer_call = 8;
    sf.gear.metadata.type.v1.Balances_ForceUnreserveCall balances_force_unreserve_call = 9;
    sf.gear.metadata.type.v1.Balances_TransferAllCall balances_transfer_all_call = 10;
    sf.gear.metadata.type.v1.Balances_TransferAllowDeathCall balances_transfer_allow_death_call = 11;
    sf.gear.metadata.type.v1.Balances_TransferKeepAliveCall balances_transfer_keep_alive_call = 12;
    sf.gear.metadata.type.v1.Balances_UpgradeAccountsCall balances_upgrade_accounts_call = 13;
    sf.gear.metadata.type.v1.Bounties_AcceptCuratorCall bounties_accept_curator_call = 14;
    sf.gear.metadata.type.v1.Bounties_ApproveBountyCall bounties_approve_bounty_call = 15;
    sf.gear.metadata.type.v1.Bounties_AwardBountyCall bounties_award_bounty_call = 16;
    sf.gear.metadata.type.v1.Bounties_ClaimBountyCall bounties_claim_bounty_call = 17;
    sf.gear.metadata.type.v1.Bounties_CloseBountyCall bounties_close_bounty_call = 18;
    sf.gear.metadata.type.v1.Bounties_ExtendBountyExpiryCall bounties_extend_bounty_expiry_call = 19;
    sf.gear.metadata.type.v1.Bounties_ProposeBountyCall bounties_propose_bounty_call = 20;
    sf.gear.metadata.type.v1.Bounties_ProposeCuratorCall bounties_propose_curator_call = 21;
    sf.gear.metadata.type.v1.Bounties_UnassignCuratorCall bounties_unassign_curator_call = 22;
    sf.gear.metadata.type.v1.ChildBounties_AcceptCuratorCall childbounties_accept_curator_call = 23;
    sf.gear.metadata.type.v1.ChildBounties_AddChildBountyCall childbounties_add_child_bounty_call = 24;
    sf.gear.metadata.type.v1.ChildBounties_AwardChildBountyCall childbounties_award_child_bounty_call = 25;
    sf.gear.metadata.type.v1.ChildBounties_ClaimChildBountyCall childbounties_claim_child_bounty_call = 26;
    sf.gear.metadata.type.v1.ChildBounties_CloseChildBountyCall childbounties_close_child_bounty_call = 27;
    sf.gear.metadata.type.v1.ChildBounties_ProposeCuratorCall childbounties_propose_curator_call = 28;
    sf.gear.metadata.type.v1.ChildBounties_UnassignCuratorCall childbounties_unassign_curator_call = 29;
    sf.gear.metadata.type.v1.ConvictionVoting_DelegateCall convictionvoting_delegate_call = 30;
    sf.gear.metadata.type.v1.ConvictionVoting_RemoveOtherVoteCall convictionvoting_remove_other_vote_call = 31;
    sf.gear.metadata.type.v1.ConvictionVoting_RemoveVoteCall convictionvoting_remove_vote_call = 32;
    sf.gear.metadata.type.v1.ConvictionVoting_UndelegateCall convictionvoting_undelegate_call = 33;
    sf.gear.metadata.type.v1.ConvictionVoting_UnlockCall convictionvoting_unlock_call = 34;
    sf.gear.metadata.type.v1.ConvictionVoting_VoteCall convictionvoting_vote_call = 35;
    sf.gear.metadata.type.v1.ElectionProviderMultiPhase_GovernanceFallbackCall electionprovidermultiphase_governance_fallback_call = 36;
    sf.gear.metadata.type.v1.ElectionProviderMultiPhase_SetEmergencyElectionResultCall electionprovidermultiphase_set_emergency_election_result_call = 37;
    sf.gear.metadata.type.v1.ElectionProviderMultiPhase_SetMinimumUntrustedScoreCall electionprovidermultiphase_set_minimum_untrusted_score_call = 38;
    sf.gear.metadata.type.v1.ElectionProviderMultiPhase_SubmitCall electionprovidermultiphase_submit_call = 39;
    sf.gear.metadata.type.v1.ElectionProviderMultiPhase_SubmitUnsignedCall electionprovidermultiphase_submit_unsigned_call = 40;
    sf.gear.metadata.type.v1.FellowshipCollective_AddMemberCall fellowshipcollective_add_member_call = 41;
    sf.gear.metadata.type.v1.FellowshipCollective_CleanupPollCall fellowshipcollective_cleanup_poll_call = 42;
    sf.gear.metadata.type.v1.FellowshipCollective_DemoteMemberCall fellowshipcollective_demote_member_call = 43;
    sf.gear.metadata.type.v1.FellowshipCollective_PromoteMemberCall fellowshipcollective_promote_member_call = 44;
    sf.gear.metadata.type.v1.FellowshipCollective_RemoveMemberCall fellowshipcollective_remove_member_call = 45;
    sf.gear.metadata.type.v1.FellowshipCollective_VoteCall fellowshipcollective_vote_call = 46;
    sf.gear.metadata.type.v1.FellowshipReferenda_CancelCall fellowshipreferenda_cancel_call = 47;
    sf.gear.metadata.type.v1.FellowshipReferenda_KillCall fellowshipreferenda_kill_call = 48;
    sf.gear.metadata.type.v1.FellowshipReferenda_NudgeReferendumCall fellowshipreferenda_nudge_referendum_call = 49;
    sf.gear.metadata.type.v1.FellowshipReferenda_OneFewerDecidingCall fellowshipreferenda_one_fewer_deciding_call = 50;
    sf.gear.metadata.type.v1.FellowshipReferenda_PlaceDecisionDepositCall fellowshipreferenda_place_decision_deposit_call = 51;
    sf.gear.metadata.type.v1.FellowshipReferenda_RefundDecisionDepositCall fellowshipreferenda_refund_decision_deposit_call = 52;
    sf.gear.metadata.type.v1.FellowshipReferenda_RefundSubmissionDepositCall fellowshipreferenda_refund_submission_deposit_call = 53;
    sf.gear.metadata.type.v1.FellowshipReferenda_SetMetadataCall fellowshipreferenda_set_metadata_call = 54;
    sf.gear.metadata.type.v1.FellowshipReferenda_SubmitCall fellowshipreferenda_submit_call = 55;
    sf.gear.metadata.type.v1.GearVoucher_CallCall gearvoucher_call_call = 56;
    sf.gear.metadata.type.v1.GearVoucher_CallDeprecatedCall gearvoucher_call_deprecated_call = 57;
    sf.gear.metadata.type.v1.GearVoucher_DeclineCall gearvoucher_decline_call = 58;
    sf.gear.metadata.type.v1.GearVoucher_IssueCall gearvoucher_issue_call = 59;
    sf.gear.metadata.type.v1.GearVoucher_RevokeCall gearvoucher_revoke_call = 60;
    sf.gear.metadata.type.v1.GearVoucher_UpdateCall gearvoucher_update_call = 61;
    sf.gear.metadata.type.v1.Gear_ClaimValueCall gear_claim_value_call = 62;
    sf.gear.metadata.type.v1.Gear_CreateProgramCall gear_create_program_call = 63;
    sf.gear.metadata.type.v1.Gear_RunCall gear_run_call = 64;
    sf.gear.metadata.type.v1.Gear_SendMessageCall gear_send_message_call = 65;
    sf.gear.metadata.type.v1.Gear_SendReplyCall gear_send_reply_call = 66;
    sf.gear.metadata.type.v1.Gear_SetExecuteInherentCall gear_set_execute_inherent_call = 67;
    sf.gear.metadata.type.v1.Gear_UploadCodeCall gear_upload_code_call = 68;
    sf.gear.metadata.type.v1.Gear_UploadProgramCall gear_upload_program_call = 69;
    sf.gear.metadata.type.v1.Grandpa_NoteStalledCall grandpa_note_stalled_call = 70;
    sf.gear.metadata.type.v1.Grandpa_ReportEquivocationCall grandpa_report_equivocation_call = 71;
    sf.gear.metadata.type.v1.Grandpa_ReportEquivocationUnsignedCall grandpa_report_equivocation_unsigned_call = 72;
    sf.gear.metadata.type.v1.Identity_AddRegistrarCall identity_add_registrar_call = 73;
    sf.gear.metadata.type.v1.Identity_AddSubCall identity_add_sub_call = 74;
    sf.gear.metadata.type.v1.Identity_CancelRequestCall identity_cancel_request_call = 75;
    sf.gear.metadata.type.v1.Identity_KillIdentityCall identity_kill_identity_call = 76;
    sf.gear.metadata.type.v1.Identity_ProvideJudgementCall identity_provide_judgement_call = 77;
    sf.gear.metadata.type.v1.Identity_RemoveSubCall identity_remove_sub_call = 78;
    sf.gear.metadata.type.v1.Identity_RenameSubCall identity_rename_sub_call = 79;
    sf.gear.metadata.type.v1.Identity_RequestJudgementCall identity_request_judgement_call = 80;
    sf.gear.metadata.type.v1.Identity_SetAccountIdCall identity_set_account_id_call = 81;
    sf.gear.metadata.type.v1.Identity_SetFeeCall identity_set_fee_call = 82;
    sf.gear.metadata.type.v1.Identity_SetFieldsCall identity_set_fields_call = 83;
    sf.gear.metadata.type.v1.Identity_SetIdentityCall identity_set_identity_call = 84;
    sf.gear.metadata.type.v1.Identity_SetSubsCall identity_set_subs_call = 85;
    sf.gear.metadata.type.v1.ImOnline_HeartbeatCall imonline_heartbeat_call = 86;
    sf.gear.metadata.type.v1.Multisig_ApproveAsMultiCall multisig_approve_as_multi_call = 87;
    sf.gear.metadata.type.v1.Multisig_AsMultiCall multisig_as_multi_call = 88;
    sf.gear.metadata.type.v1.Multisig_AsMultiThreshold1Call multisig_as_multi_threshold_1_call = 89;
    sf.gear.metadata.type.v1.Multisig_CancelAsMultiCall multisig_cancel_as_multi_call = 90;
    sf.gear.metadata.type.v1.NominationPools_AdjustPoolDepositCall nominationpools_adjust_pool_deposit_call = 91;
    sf.gear.metadata.type.v1.NominationPools_BondExtraCall nominationpools_bond_extra_call = 92;
    sf.gear.metadata.type.v1.NominationPools_BondExtraOtherCall nominationpools_bond_extra_other_call = 93;
    sf.gear.metadata.type.v1.NominationPools_ChillCall nominationpools_chill_call = 94;
    sf.gear.metadata.type.v1.NominationPools_ClaimCommissionCall nominationpools_claim_commission_call = 95;
    sf.gear.metadata.type.v1.NominationPools_ClaimPayoutOtherCall nominationpools_claim_payout_other_call = 96;
    sf.gear.metadata.type.v1.NominationPools_CreateCall nominationpools_create_call = 97;
    sf.gear.metadata.type.v1.NominationPools_CreateWithPoolIdCall nominationpools_create_with_pool_id_call = 98;
    sf.gear.metadata.type.v1.NominationPools_JoinCall nominationpools_join_call = 99;
    sf.gear.metadata.type.v1.NominationPools_NominateCall nominationpools_nominate_call = 100;
    sf.gear.metadata.type.v1.NominationPools_PoolWithdrawUnbondedCall nominationpools_pool_withdraw_unbonded_call = 101;
    sf.gear.metadata.type.v1.NominationPools_SetClaimPermissionCall nominationpools_set_claim_permission_call = 102;
    sf.gear.metadata.type.v1.NominationPools_SetCommissionCall nominationpools_set_commission_call = 103;
    sf.gear.metadata.type.v1.NominationPools_SetCommissionChangeRateCall nominationpools_set_commission_change_rate_call = 104;
    sf.gear.metadata.type.v1.NominationPools_SetCommissionMaxCall nominationpools_set_commission_max_call = 105;
    sf.gear.metadata.type.v1.NominationPools_SetConfigsCall nominationpools_set_configs_call = 106;
    sf.gear.metadata.type.v1.NominationPools_SetMetadataCall nominationpools_set_metadata_call = 107;
    sf.gear.metadata.type.v1.NominationPools_SetStateCall nominationpools_set_state_call = 108;
    sf.gear.metadata.type.v1.NominationPools_UnbondCall nominationpools_unbond_call = 109;
    sf.gear.metadata.type.v1.NominationPools_UpdateRolesCall nominationpools_update_roles_call = 110;
    sf.gear.metadata.type.v1.NominationPools_WithdrawUnbondedCall nominationpools_withdraw_unbonded_call = 111;
    sf.gear.metadata.type.v1.Preimage_EnsureUpdatedCall preimage_ensure_updated_call = 112;
    sf.gear.metadata.type.v1.Preimage_NotePreimageCall preimage_note_preimage_call = 113;
    sf.gear.metadata.type.v1.Preimage_RequestPreimageCall preimage_request_preimage_call = 114;
    sf.gear.metadata.type.v1.Preimage_UnnotePreimageCall preimage_unnote_preimage_call = 115;
    sf.gear.metadata.type.v1.Preimage_UnrequestPreimageCall preimage_unrequest_preimage_call = 116;
    sf.gear.metadata.type.v1.Proxy_AddProxyCall proxy_add_proxy_call = 117;
    sf.gear.metadata.type.v1.Proxy_AnnounceCall proxy_announce_call = 118;
    sf.gear.metadata.type.v1.Proxy_CreatePureCall proxy_create_pure_call = 119;
    sf.gear.metadata.type.v1.Proxy_KillPureCall proxy_kill_pure_call = 120;
    sf.gear.metadata.type.v1.Proxy_ProxyAnnouncedCall proxy_proxy_announced_call = 121;
    sf.gear.metadata.type.v1.Proxy_ProxyCall proxy_proxy_call = 122;
    sf.gear.metadata.type.v1.Proxy_RejectAnnouncementCall proxy_reject_announcement_call = 123;
    sf.gear.metadata.type.v1.Proxy_RemoveAnnouncementCall proxy_remove_announcement_call = 124;
    sf.gear.metadata.type.v1.Proxy_RemoveProxyCall proxy_remove_proxy_call = 125;
    sf.gear.metadata.type.v1.Referenda_CancelCall referenda_cancel_call = 126;
    sf.gear.metadata.type.v1.Referenda_KillCall referenda_kill_call = 127;
    sf.gear.metadata.type.v1.Referenda_NudgeReferendumCall referenda_nudge_referendum_call = 128;
    sf.gear.metadata.type.v1.Referenda_OneFewerDecidingCall referenda_one_fewer_deciding_call = 129;
    sf.gear.metadata.type.v1.Referenda_PlaceDecisionDepositCall referenda_place_decision_deposit_call = 130;
    sf.gear.metadata.type.v1.Referenda_RefundDecisionDepositCall referenda_refund_decision_deposit_call = 131;
    sf.gear.metadata.type.v1.Referenda_RefundSubmissionDepositCall referenda_refund_submission_deposit_call = 132;
    sf.gear.metadata.type.v1.Referenda_SetMetadataCall referenda_set_metadata_call = 133;
    sf.gear.metadata.type.v1.Referenda_SubmitCall referenda_submit_call = 134;
    sf.gear.metadata.type.v1.Scheduler_CancelCall scheduler_cancel_call = 135;
    sf.gear.metadata.type.v1.Scheduler_CancelNamedCall scheduler_cancel_named_call = 136;
    sf.gear.metadata.type.v1.Scheduler_ScheduleAfterCall scheduler_schedule_after_call = 137;
    sf.gear.metadata.type.v1.Scheduler_ScheduleCall scheduler_schedule_call = 138;
    sf.gear.metadata.type.v1.Scheduler_ScheduleNamedAfterCall scheduler_schedule_named_after_call = 139;
    sf.gear.metadata.type.v1.Scheduler_ScheduleNamedCall scheduler_schedule_named_call = 140;
    sf.gear.metadata.type.v1.Session_SetKeysCall session_set_keys_call = 141;
    sf.gear.metadata.type.v1.StakingRewards_AlignSupplyCall stakingrewards_align_supply_call = 142;
    sf.gear.metadata.type.v1.StakingRewards_ForceRefillCall stakingrewards_force_refill_call = 143;
    sf.gear.metadata.type.v1.StakingRewards_RefillCall stakingrewards_refill_call = 144;
    sf.gear.metadata.type.v1.StakingRewards_WithdrawCall stakingrewards_withdraw_call = 145;
    sf.gear.metadata.type.v1.Staking_BondCall staking_bond_call = 146;
    sf.gear.metadata.type.v1.Staking_BondExtraCall staking_bond_extra_call = 147;
    sf.gear.metadata.type.v1.Staking_CancelDeferredSlashCall staking_cancel_deferred_slash_call = 148;
    sf.gear.metadata.type.v1.Staking_ChillOtherCall staking_chill_other_call = 149;
    sf.gear.metadata.type.v1.Staking_ForceApplyMinCommissionCall staking_force_apply_min_commission_call = 150;
    sf.gear.metadata.type.v1.Staking_ForceUnstakeCall staking_force_unstake_call = 151;
    sf.gear.metadata.type.v1.Staking_IncreaseValidatorCountCall staking_increase_validator_count_call = 152;
    sf.gear.metadata.type.v1.Staking_KickCall staking_kick_call = 153;
    sf.gear.metadata.type.v1.Staking_NominateCall staking_nominate_call = 154;
    sf.gear.metadata.type.v1.Staking_PayoutStakersCall staking_payout_stakers_call = 155;
    sf.gear.metadata.type.v1.Staking_ReapStashCall staking_reap_stash_call = 156;
    sf.gear.metadata.type.v1.Staking_RebondCall staking_rebond_call = 157;
    sf.gear.metadata.type.v1.Staking_ScaleValidatorCountCall staking_scale_validator_count_call = 158;
    sf.gear.metadata.type.v1.Staking_SetInvulnerablesCall staking_set_invulnerables_call = 159;
    sf.gear.metadata.type.v1.Staking_SetMinCommissionCall staking_set_min_commission_call = 160;
    sf.gear.metadata.type.v1.Staking_SetPayeeCall staking_set_payee_call = 161;
    sf.gear.metadata.type.v1.Staking_SetStakingConfigsCall staking_set_staking_configs_call = 162;
    sf.gear.metadata.type.v1.Staking_SetValidatorCountCall staking_set_validator_count_call = 163;
    sf.gear.metadata.type.v1.Staking_UnbondCall staking_unbond_call = 164;
    sf.gear.metadata.type.v1.Staking_ValidateCall staking_validate_call = 165;
    sf.gear.metadata.type.v1.Staking_WithdrawUnbondedCall staking_withdraw_unbonded_call = 166;
    sf.gear.metadata.type.v1.System_KillPrefixCall system_kill_prefix_call = 167;
    sf.gear.metadata.type.v1.System_KillStorageCall system_kill_storage_call = 168;
    sf.gear.metadata.type.v1.System_RemarkCall system_remark_call = 169;
    sf.gear.metadata.type.v1.System_RemarkWithEventCall system_remark_with_event_call = 170;
    sf.gear.metadata.type.v1.System_SetCodeCall system_set_code_call = 171;
    sf.gear.metadata.type.v1.System_SetCodeWithoutChecksCall system_set_code_without_checks_call = 172;
    sf.gear.metadata.type.v1.System_SetHeapPagesCall system_set_heap_pages_call = 173;
    sf.gear.metadata.type.v1.System_SetStorageCall system_set_storage_call = 174;
    sf.gear.metadata.type.v1.Timestamp_SetCall timestamp_set_call = 175;
    sf.gear.metadata.type.v1.Treasury_ApproveProposalCall treasury_approve_proposal_call = 176;
    sf.gear.metadata.type.v1.Treasury_CheckStatusCall treasury_check_status_call = 177;
    sf.gear.metadata.type.v1.Treasury_PayoutCall treasury_payout_call = 178;
    sf.gear.metadata.type.v1.Treasury_ProposeSpendCall treasury_propose_spend_call = 179;
    sf.gear.metadata.type.v1.Treasury_RejectProposalCall treasury_reject_proposal_call = 180;
    sf.gear.metadata.type.v1.Treasury_RemoveApprovalCall treasury_remove_approval_call = 181;
    sf.gear.metadata.type.v1.Treasury_SpendCall treasury_spend_call = 182;
    sf.gear.metadata.type.v1.Treasury_SpendLocalCall treasury_spend_local_call = 183;
    sf.gear.metadata.type.v1.Treasury_VoidSpendCall treasury_void_spend_call = 184;
    sf.gear.metadata.type.v1.Utility_AsDerivativeCall utility_as_derivative_call = 185;
    sf.gear.metadata.type.v1.Utility_BatchAllCall utility_batch_all_call = 186;
    sf.gear.metadata.type.v1.Utility_BatchCall utility_batch_call = 187;
    sf.gear.metadata.type.v1.Utility_DispatchAsCall utility_dispatch_as_call = 188;
    sf.gear.metadata.type.v1.Utility_ForceBatchCall utility_force_batch_call = 189;
    sf.gear.metadata.type.v1.Utility_WithWeightCall utility_with_weight_call = 190;
    sf.gear.metadata.type.v1.Vesting_ForceVestedTransferCall vesting_force_vested_transfer_call = 191;
    sf.gear.metadata.type.v1.Vesting_MergeSchedulesCall vesting_merge_schedules_call = 192;
    sf.gear.metadata.type.v1.Vesting_VestOtherCall vesting_vest_other_call = 193;
    sf.gear.metadata.type.v1.Vesting_VestedTransferCall vesting_vested_transfer_call = 194;
    sf.gear.metadata.type.v1.Whitelist_DispatchWhitelistedCallCall whitelist_dispatch_whitelisted_call_call = 195;
    sf.gear.metadata.type.v1.Whitelist_DispatchWhitelistedCallWithPreimageCall whitelist_dispatch_whitelisted_call_with_preimage_call = 196;
    sf.gear.metadata.type.v1.Whitelist_RemoveWhitelistedCallCall whitelist_remove_whitelisted_call_call = 197;
    sf.gear.metadata.type.v1.Whitelist_WhitelistCallCall whitelist_whitelist_call_call = 198;
  }
}
