syntax = "proto3";

message sp_consensus_babe_app_Public {
	sp_core_sr25519_Public offender = 1;
}
message Babe_logs {
	oneof value {
		Babe_PreRuntime PreRuntime = 1;
		Babe_Consensus Consensus = 2;
		Babe_Seal Seal = 3;
		Babe_Other Other = 4;
		Babe_RuntimeEnvironmentUpdated RuntimeEnvironmentUpdated = 5;
	}
}
message sp_consensus_slots_EquivocationProof {
	sp_consensus_babe_app_Public offender = 1;
	sp_consensus_slots_Slot slot = 2;
	sp_runtime_generic_header_Header first_header = 3;
	sp_runtime_generic_header_Header second_header = 4;
}
message sp_session_MembershipProof {
	uint32 session = 1;
	repeated Babe_trie_nodes_list trie_nodes = 2;

	uint32 validator_count = 3;
}
message Babe_config {
	oneof value {
		Babe_V1 V1 = 1;
	}
}
message Babe_RuntimeEnvironmentUpdated {
}
message sp_runtime_generic_digest_DigestItem {
	Babe_logs logs = 1;
}
message Babe_Consensus {
	repeated uint32  = 1;

	repeated uint32  = 2;

}
message sp_runtime_generic_digest_Digest {
	repeated sp_runtime_generic_digest_DigestItem logs = 1;

}
message Babe_PrimarySlots {
}
message Babe_PrimaryAndSecondaryPlainSlots {
}
message Babe_PrimaryAndSecondaryVRFSlots {
}
message Babe_Other {
	repeated uint32  = 1;

}
message Babe_allowed_slots {
	oneof value {
		Babe_PrimarySlots PrimarySlots = 1;
		Babe_PrimaryAndSecondaryPlainSlots PrimaryAndSecondaryPlainSlots = 2;
		Babe_PrimaryAndSecondaryVRFSlots PrimaryAndSecondaryVRFSlots = 3;
	}
}
message sp_consensus_slots_Slot {
	uint64 slot = 1;
}
message primitive_types_H256 {
	repeated uint32 parent_hash = 1;

}
message Compact {
	uint32 value = 1;
}
message Babe_PreRuntime {
	repeated uint32  = 1;

	repeated uint32  = 2;

}
message Babe_ReportEquivocation_Call {
	sp_consensus_slots_EquivocationProof equivocation_proof = 1;
	sp_session_MembershipProof key_owner_proof = 2;
}
message Tuple_uint64uint64 {
	Tuple_uint64uint64 c = 1;
}
message Babe_Seal {
	repeated uint32  = 1;

	repeated uint32  = 2;

}
message Babe_PlanConfigChange_Call {
	Babe_config config = 1;
}
message sp_runtime_generic_header_Header {
	primitive_types_H256 parent_hash = 1;
	Compact number = 2;
	primitive_types_H256 state_root = 3;
	primitive_types_H256 extrinsics_root = 4;
	sp_runtime_generic_digest_Digest digest = 5;
}
message Babe_trie_nodes_list {
	repeated uint32 trie_nodes = 1;

}
message Babe_ReportEquivocationUnsigned_Call {
	sp_consensus_slots_EquivocationProof equivocation_proof = 1;
	sp_session_MembershipProof key_owner_proof = 2;
}
message Babe_V1 {
	Tuple_uint64uint64 c = 1;
	Babe_allowed_slots allowed_slots = 2;
}
message sp_core_sr25519_Public {
	repeated uint32 offender = 1;

}
